# Windows-Tools-R

./: .gitignore  README.md  RELEASE-v0.1.3.md  RELEASE-v0.1.4.md  build.ps1  embed-admin.ps1  index.html  package-lock.json  package.json  sync-version.ps1  vite.config.ts
src/: App.css  App.tsx  Apps.css  Apps.tsx  Install.css  Install.tsx  Monitor.css  Monitor.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
